--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/test/struct_modules/_build
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
