--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # The directory Mix downloads your dependencies sources to.
 /deps/
+/test/struct_modules/deps
 
 # Where third-party dependencies like ExDoc output generated docs.
 /doc/
