--- a/benchmark_ecto_domo/.gitignore
+++ b/benchmark_ecto_domo/.gitignore
@@ -20,7 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-benchmark-*.tar
+benchmark_ecto_domo-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
