--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,16 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+    name: OTP ${{ matrix.otp }} / Elixir ${{ matrix.elixir }}
     strategy:
       matrix:
-        otp: ['23.3.1', '24.3.3']
-        elixir: ['1.11.0', '1.13.4']
+        include:
+          - otp: 23.3.1
+            elixir: 1.11.0
+          - otp: 24.3.3
+            elixir: 1.13.4
+          - otp: 25.1.2
+            elixir: 1.14.2
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
