--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: OTP ${{ matrix.otp }} / Elixir ${{ matrix.elixir }}
     strategy:
       matrix:
@@ -16,11 +16,11 @@ jobs:
             elixir: 1.11.0
           - otp: 24.3.3
             elixir: 1.13.4
-          - otp: 25.1.2
-            elixir: 1.14.2
+          - otp: 25.3
+            elixir: 1.14.4
     steps:
       - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
+      - uses: erlef/setup-beam@v1.15
         with:
           otp-version: ${{matrix.otp}}
           elixir-version: ${{matrix.elixir}}
