--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: Elixir CI
 
-on: push
+on:
+  push:
 
 permissions:
   contents: read
@@ -32,5 +33,7 @@ jobs:
           restore-keys: ${{ runner.os }}-mix-cache-
       - name: Get dependencies
         run: mix deps.get
+      - name: Run primitive end2end test for integration with TypedStruct
+        run: cd example_typed_integrations && mix deps.get && mix compile && mix run -e EctoSchemaStruct.new!
       - name: Run checks
         run: mix check || mix check --retry
